name:                pg-recorder
version:             0.2.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/pg-recorder#readme
license:             BSD3
license-file:        LICENSE
author:              Diogo Biazus
maintainer:          diogo@biazus.me
copyright:           2016 Diogo Biazus
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     PgRecorder
                     , PgRecorder.Config
                     , PgRecorder.Database
  other-modules:       Paths_pg_recorder
                     , PgRecorder.Prelude
  build-depends:       base >= 4.7
                     , protolude >= 0.1.6
                     , optparse-applicative >= 0.12
                     , optparse-text >= 0.1.1.0
                     , resource-pool >= 0.2.3
                     , text >= 1.2.2.1
                     , postgresql-libpq >= 0.9
                     , hasql >= 1.4
                     , hasql-pool >= 0.4
                     , either >= 4.4
                     , bytestring >= 0.10.8
                     , stringsearch >= 0.3.6 
                     , contravariant
                     , hasql

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable pg-recorder
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pg-recorder
                     , protolude >= 0.1.6
                     , hasql >= 1.4
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite pg-recorder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       DatabaseSpec
  build-depends:       base
                     , pg-recorder
                     , resource-pool >= 0.2.3
                     , hspec >= 2.2.3
                     , protolude >= 0.1.6
                     , postgresql-libpq >= 0.9
                     , hasql >= 0.19
                     , hasql-pool >= 0.4
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/pg-recorder
